--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -1,5 +1,4 @@
-regNumber =Carregnumber
+regNumber =CarRegnumber
 model =CarModel
-inServiceSince =Car inServiceSince
-odometer =Car odometer
-totalHoursSpent=TotalTime
+inServiceSince=Car inServiceSince
+ odometer =Car odometer
