--- a/i18n/i18n_de.properties
+++ b/i18n/i18n_de.properties
@@ -1,5 +1,5 @@
-regNumber =Carregnummer
+regNumber =Autokennzeichen
 model =Automodell
-inServiceSince =Auto in Betrieb seit
-odometer =Kilometerzähler
-totalHoursSpent=Gesamtzeit
+inServiceSince=Auto in Betrieb seit
+ odometer =Kilometerzähler
+ 
